--- a/src/locale/ja/LC_MESSAGES/quick_start.po
+++ b/src/locale/ja/LC_MESSAGES/quick_start.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-21 01:58+0000\n"
+"PO-Revision-Date: 2016-09-23 04:41+0000\n"
 "Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -1745,7 +1745,7 @@ msgid ""
 "example, can seamlessly use our :ref:`CLI <monaca_cli_index>` to take "
 "advantages of the cloud-powered services without switching or any "
 "complicated porting. We take OPEN seriously."
-msgstr ""
+msgstr "非依存型 ( フロントエンドに使用する各種フレームワークからの独立 ) : 使用するフレームワークは、開発者が自由に選択できます。お勧めのフレームワークとして、私たちが開発している `Onsen フレームワーク <http://onsen.io/>`_ ( オープンソース、バージョン 1 は Angular に依存 ) がありますが、基本的に、使用するフレームワークは、開発者が自由に選択できます。また、お勧めのツールとしては、:ref:`Monaca CLI <monaca_cli_index>` があります。このツールを使用すれば、開発環境の切り替え、別環境への移植作業などをせずに、現在お使いの開発環境で、Monaca クラウドが提供している各種 Web サービスを利用することができます ( 特に、Ionic、Cordova を使用してきた開発者に、Monaca CLI の使用をお勧めします )。Monaca は、「 開発者の自由度の向上 」 を真剣に考えています !"
 
 #: ../doc/quick_start/monaca_intro.rst:36
 msgid "Monaca Development Tools"
