[pofile] Reflect the translation.

--- a/src/locale/ja/LC_MESSAGES/manual.po
+++ b/src/locale/ja/LC_MESSAGES/manual.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-23 09:54+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-09-23 10:18+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7240,7 +7240,7 @@ msgstr "Monaca CLI を使用して、Monaca クラウドからログアウトす
 
 #: ../doc/manual/development/monaca_cli/index.rst:5
 msgid "Getting Started with Monaca CLI"
-msgstr ""
+msgstr "Monaca CLI"
 
 #: ../doc/manual/development/monaca_cli/overview.rst:5
 msgid "Monaca CLI Overview"
@@ -7914,7 +7914,7 @@ msgstr ":ref:`emmet`"
 
 #: ../doc/manual/development/monaca_ide/index.rst:5
 msgid "Getting Started with Monaca Cloud IDE"
-msgstr ""
+msgstr "Monaca クラウド IDE"
 
 #: ../doc/manual/development/monaca_ide/index.rst:11
 msgid ""
@@ -9764,7 +9764,7 @@ msgstr ":doc:`troubleshooting`"
 
 #: ../doc/manual/development/monaca_localkit/index.rst:5
 msgid "Getting Started with Monaca Localkit"
-msgstr ""
+msgstr "Monaca Localkit"
 
 #: ../doc/manual/development/monaca_localkit/overview.rst:5
 msgid "Monaca Localkit Overview"
@@ -10248,7 +10248,7 @@ msgstr ":doc:`../../../quick_start/monaca_vs/index`"
 
 #: ../doc/manual/development/monaca_vs/index.rst:4
 msgid "Getting Started with Monaca for Visual Studio"
-msgstr ""
+msgstr "Monaca for Visual Studio の概要"
 
 #: ../doc/manual/development/monaca_vs/overview.rst:3
 msgid "Monaca for Visual Studio Overview"
