--- a/src/locale/ja/LC_MESSAGES/reference.po
+++ b/src/locale/ja/LC_MESSAGES/reference.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Monaca Docs\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-09-23 09:54+0000\n"
-"Last-Translator: fabbygoh <fabbygoh@gmail.com>\n"
+"PO-Revision-Date: 2016-09-23 10:15+0000\n"
+"Last-Translator: Masakazu Watabe <watabe08@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/monaca/monaca-docs/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21040,7 +21040,7 @@ msgstr "この設定は、プラグインではなく、``window.open()`` の呼
 
 #: ../doc/reference/index.rst:2
 msgid "API"
-msgstr ""
+msgstr "各種 API"
 
 #: ../doc/reference/monaca_api/cloud.rst:5
 msgid "Backend API"
